--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.6.0",
     "@types/react-transition-group": "^4.4.10",
+    "axios": "^1.7.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
