--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-      "push": "npx @open-sauced/conventional-commit"
+    "push": "npx @open-sauced/conventional-commit"
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.6.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/react-transition-group": "^4.4.10",
     "axios": "^1.7.6",
     "class-variance-authority": "^0.7.0",
@@ -20,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-transition-group": "^4.4.5",
     "tailwind-merge": "^2.3.0",
