--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.6.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tabler/icons-react": "^3.14.0",
     "@types/react-transition-group": "^4.4.10",
     "axios": "^1.7.6",
     "class-variance-authority": "^0.7.0",
