--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tabler/icons-react": "^3.14.0",
     "@types/react-transition-group": "^4.4.10",
     "axios": "^1.7.6",
+    "blurhash": "^2.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
